--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,17 @@
             <organization>DD4T</organization>
             <organizationUrl>https://github.com/dd4t</organizationUrl>
         </developer>
+        <developer>
+            <name>Raimond Kempees</name>
+            <email>kempees@radagio.com</email>
+            <organization>DD4T</organization>
+            <organizationUrl>https://github.com/dd4t</organizationUrl>
+        </developer>
     </developers>
-
-    <!-- todo: scm -->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <project.skipTests>true</project.skipTests>
 
         <!-- versions -->
         <commons-io.version>2.4</commons-io.version>
