--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.dd4t</groupId>
     <artifactId>dd4t-cachechannel</artifactId>
     <packaging>jar</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
 
     <name>dd4t-cache</name>
     <description>DD4T CacheChannelConnector implementation for DD4T .NET</description>
@@ -56,7 +56,7 @@
         <slf4j.version>1.6.4</slf4j.version>
         <junit.version>4.11</junit.version>
         <activemq.version>5.10.0</activemq.version>
-        <tridion.version>7.1.0</tridion.version>
+        <tridion.version>8.1.1-1005</tridion.version>
     </properties>
 
     <build>
@@ -89,6 +89,26 @@
           <groupId>com.tridion.contentdelivery</groupId>
           <artifactId>cd_core</artifactId>
           <version>${tridion.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tridion.contentdelivery</groupId>
+            <artifactId>cd_common_config</artifactId>
+            <version>8.1.1-1002</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tridion.contentdelivery</groupId>
+            <artifactId>cd_common_config_api</artifactId>
+            <version>8.1.1-1002</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tridion.contentdelivery</groupId>
+            <artifactId>cd_common_config_legacy</artifactId>
+            <version>8.1.1-1002</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tridion.contentdelivery</groupId>
+            <artifactId>cd_common_util</artifactId>
+            <version>8.1.1-1002</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
