--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.dd4t</groupId>
     <artifactId>dd4t-cachechannel</artifactId>
     <packaging>jar</packaging>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
 
     <name>dd4t-cache</name>
     <description>DD4T CacheChannelConnector implementation for DD4T .NET</description>
@@ -81,34 +81,34 @@
           <version>${jackson.version}</version>
         </dependency>
         <dependency>
-          <groupId>com.tridion.contentdelivery</groupId>
-          <artifactId>cd_cache</artifactId>
-          <version>${tridion.version}</version>
+          <groupId>com.tridion.custom</groupId>
+          <artifactId>udp-cache</artifactId>
+          <version>11.0.0-1035</version>
         </dependency>
         <dependency>
-          <groupId>com.tridion.contentdelivery</groupId>
-          <artifactId>cd_core</artifactId>
-          <version>${tridion.version}</version>
+          <groupId>com.tridion.custom</groupId>
+          <artifactId>udp-core</artifactId>
+          <version>11.0.0-1034</version>
         </dependency>
         <dependency>
-            <groupId>com.tridion.contentdelivery</groupId>
-            <artifactId>cd_common_config</artifactId>
-            <version>${tridion.version}</version>
+            <groupId>com.tridion.custom</groupId>
+            <artifactId>udp-common-config</artifactId>
+            <version>11.0.0-1035</version>
         </dependency>
         <dependency>
-            <groupId>com.tridion.contentdelivery</groupId>
-            <artifactId>cd_common_config_api</artifactId>
-            <version>${tridion.version}</version>
+            <groupId>com.tridion.custom</groupId>
+            <artifactId>udp-common-config-api</artifactId>
+            <version>11.0.0-1035</version>
         </dependency>
         <dependency>
-            <groupId>com.tridion.contentdelivery</groupId>
-            <artifactId>cd_common_config_legacy</artifactId>
-            <version>${tridion.version}</version>
+            <groupId>com.tridion.custom</groupId>
+            <artifactId>udp-common-config-legacy</artifactId>
+            <version>11.0.0-1035</version>
         </dependency>
         <dependency>
-            <groupId>com.tridion.contentdelivery</groupId>
-            <artifactId>cd_common_util</artifactId>
-            <version>${tridion.version}</version>
+            <groupId>com.tridion.custom</groupId>
+            <artifactId>udp-common-util</artifactId>
+            <version>11.0.0-1035</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
