--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.dd4t</groupId>
-    <artifactId>dd4t-cachechannel</artifactId>
+    <artifactId>dd4t-cachechannel-sdlweb85</artifactId>
     <packaging>jar</packaging>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.1</version>
 
     <name>dd4t-cache</name>
     <description>DD4T CacheChannelConnector implementation for DD4T .NET</description>
@@ -81,34 +81,34 @@
           <version>${jackson.version}</version>
         </dependency>
         <dependency>
-          <groupId>com.tridion.custom</groupId>
-          <artifactId>udp-cache</artifactId>
-          <version>11.0.0-1035</version>
+            <groupId>com.tridion</groupId>
+            <artifactId>cd_cache</artifactId>
+            <version>[8.5.0-1069]</version>
         </dependency>
         <dependency>
-          <groupId>com.tridion.custom</groupId>
-          <artifactId>udp-core</artifactId>
-          <version>11.0.0-1034</version>
+            <groupId>com.tridion</groupId>
+            <artifactId>cd_core</artifactId>
+            <version>[8.5.0-1056]</version>
         </dependency>
         <dependency>
-            <groupId>com.tridion.custom</groupId>
-            <artifactId>udp-common-config</artifactId>
-            <version>11.0.0-1035</version>
+            <groupId>com.tridion</groupId>
+            <artifactId>cd_common_config</artifactId>
+            <version>[8.5.0-1052]</version>
         </dependency>
         <dependency>
-            <groupId>com.tridion.custom</groupId>
-            <artifactId>udp-common-config-api</artifactId>
-            <version>11.0.0-1035</version>
+            <groupId>com.tridion</groupId>
+            <artifactId>cd_common_config_api</artifactId>
+            <version>[8.5.0-1052]</version>
         </dependency>
         <dependency>
-            <groupId>com.tridion.custom</groupId>
-            <artifactId>udp-common-config-legacy</artifactId>
-            <version>11.0.0-1035</version>
+            <groupId>com.tridion</groupId>
+            <artifactId>cd_common_config_legacy</artifactId>
+            <version>[8.5.0-1052]</version>
         </dependency>
         <dependency>
-            <groupId>com.tridion.custom</groupId>
-            <artifactId>udp-common-util</artifactId>
-            <version>11.0.0-1035</version>
+            <groupId>com.tridion</groupId>
+            <artifactId>cd_common_util</artifactId>
+            <version>[8.5.0-1052]</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
